// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile matches snapshot when regular size 1`] = `
<DocumentFragment>
  <div
    class="tw-tile d-flex flex-column text-xs-center tw-tile--large p-x-5 p-y-4"
  >
    <div
      class="m-y-2 m-x-auto"
    >
      <svg
        data-testid="illustration"
      />
    </div>
    <a
      class="tw-tile__link text-no-decoration "
      role="button"
      tabindex="0"
    >
      <span
        class="h4"
      >
        Receive money
      </span>
    </a>
    <div
      class="tw-tile__content"
    >
      <span>
        Receive money from friends and familty like a local.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile matches snapshot when small size 1`] = `
<DocumentFragment>
  <div
    class="tw-tile d-flex flex-column text-xs-center tw-tile--small p-a-2"
  >
    <div
      class="m-y-2 m-x-auto"
    >
      <svg
        data-testid="illustration"
      />
    </div>
    <a
      class="tw-tile__link text-no-decoration "
      role="button"
      tabindex="0"
    >
      <span
        class="h5"
      >
        Receive money
      </span>
    </a>
    <div
      class="tw-tile__content"
    >
      <span>
        Receive money from friends and familty like a local.
      </span>
    </div>
  </div>
</DocumentFragment>
`;
